# AI-Coding-Challenge-Generator

backend/: .gitignore  database.db  pyproject.toml  server.py
backend/src/: ai_generator.py  app.py
backend/src/database/: db.py
backend/src/routes/: challenge.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: LayOut.jsx
