[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clerk-backend-api>=6.0.0",
    "fastapi>=0.125.0",
    "google-genai>=2.8.0",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "svix>=1.95.2",
    "uvicorn>=0.49.0",
]
